--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
             <h1 id="name">Name:</h1>
             <p id="birthday">Birthday:</p>
             <p>| Phone: <span id="contactNo"></span></p>
-            <p id="location">Location: Middle Nivel Hills, Apas, Cebu City, Philippines</p>
+            <p id="location"></p>
         </header>
         <hr>
         <div class="section">
             <h2 class="section-header">Summary</h2>
-            <p>A dedicated and motivated web developer with 5 years of experience in creating responsive websites and web applications. Proficient in HTML, CSS, JavaScript, and various front-end frameworks.</p>
+            <p></p>
         </div>
         <div class="section" id="experience">
             <h2 class="section-header">Experience</h2>
