--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 button.textContent = 'Night Mode';
             }
         }
-
         window.onload = fetchData;
     </script>
+        <script src="script.js"></script>
 </body>
 </html>
