--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <header>
             <h1 id="name">Name:</h1>
             <p id="birthday">Birthday:</p>
-            <p>| Phone: <span id="contactNo"></span></p>
+            <p id="gender">Gender:</p>
+            <p>Email: <a href="mailto:hansdmontemar@gmail.com" id="email">hansdmontemar@gmail.com</a> | Phone: <span id="contactNo"></span></p>
             <p id="location"></p>
         </header>
         <hr>
         <div class="section">
             <h2 class="section-header">Summary</h2>
-            <p></p>
+            <p id="summary"></p>
         </div>
         <div class="section" id="experience">
             <h2 class="section-header">Experience</h2>
@@ -32,19 +33,19 @@
             <h2 class="section-header">Skills</h2>
             <!-- Skills items will be populated here -->
         </div>
+        <div class="section" id="references">
+            <h2 class="section-header">References</h2>
+            <!-- References items will be populated here -->
+        </div>
     </div>
     <script>
         function toggleMode() {
             document.body.classList.toggle('night-mode');
             const button = document.querySelector('.toggle-button');
-            if (document.body.classList.contains('night-mode')) {
-                button.textContent = 'Day Mode';
-            } else {
-                button.textContent = 'Night Mode';
-            }
+            button.textContent = document.body.classList.contains('night-mode') ? 'Day Mode' : 'Night Mode';
         }
         window.onload = fetchData;
     </script>
-        <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
